<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Length Weight Converter</string>
    <string name="action_core_overflow">Overflow</string>

    <string-array name="length_array">
        <item>Inches (in)</item>
        <item>Millimetres (mm)</item>
        <item>Centimetres (cm)</item>
        <item>Metres (m)</item>
        <item>Feet (ft)</item>
        <item>Yards (yd)</item>
        <item>Kilometres (km)</item>
        <item>Miles (mi)</item>
    </string-array>
    
    <string-array name="weight_array">
        <item>Pounds (lb)</item>
        <item>Kilograms (kg)</item>
        <item>Stone (st)</item>
        <item>Ounces (oz)</item>
        <item>Grams (g)</item>
        <item>Milligrams (mg)</item>
    </string-array>

    <color name="action_bar">#673ab7</color>
    <color name="primary">#424242</color>
    <color name="primary_dark">#000000</color>
    <color name="accent">#673ab7</color>
    <color name="accent_dark">#311b92</color>


    <string name="default_value">0</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button0">0</string>
    <string name="ButtonDecimal">.</string>
    <string name="ButtonClear">Clear</string>
    <string name="ButtonBackspace">Backspace</string>
    <string name="ButtonSwitch">Switch</string>

</resources>